--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.JDBC_SQLite.classpath}
+    ${libs.JDBC_SQLite.classpath}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
